# kcapi

./: .gitmodules  Cargo.toml  LICENSE-BSD-2-Clause  LICENSE-GPL-2.0  README.md
kcapi/: Cargo.toml  LICENSE  README.md
kcapi-sys/: Cargo.toml  README.md  build.rs
kcapi-sys/src/: lib.rs
kcapi/src/: lib.rs  md.rs  rng.rs  version.rs
kcapi/src/tests/: md.rs  mod.rs  rng.rs
src/: aead.rs  akcipher.rs  kdf.rs  lib.rs  md.rs  rng.rs  skcipher.rs
