[package]
name = "kcapi"
version = "0.2.0"
edition = "2024"
license = "BSD-3-Clause"
description = "Official high-level rust bindings for libkcapi"
homepage = "https://github.com/puru1761/kcapi"
repository = "https://github.com/puru1761/kcapi"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kcapi-sys = { version = "1.5.0", path = "kcapi-sys", default-features = false }
libc = { version = "0.2.182" }

[features]
default = ["vendored-kcapi", "asym"]
vendored-kcapi = ["kcapi-sys/vendored-kcapi"]
local-kcapi = ["kcapi-sys/local-kcapi"]
asym = []
